feat: Implement full CRUD functionality for projects
This commit introduces complete Create, Read, Update, and Delete (CRUD) operations for projects, managed through the UI.

- **API:** Add `PUT` and `DELETE` endpoints to the projects API route to handle updating and deleting projects.
- **ProjectSelector:** Enhance the component to allow users to add, edit, and delete projects directly. The project list now refreshes automatically after each operation.
- **Data Filtering:** The main page now filters the `Statistics` and `RecentComments` components to display data relevant to the selected project.
- **Data Model:** Update the `Task` type to include a `projectId` and define a new `Comment` type.
- **Seed Data:** Populate `comments.json` and update `tasks.json` with initial data for development and testing.

--- a/data/tasks.json
+++ b/data/tasks.json
@@ -2,8 +2,8 @@
   {
     "id": 1,
     "text": "设计一个新的 logo",
-    "completed": true,
-    "status": "done",
+    "completed": false,
+    "status": "todo",
     "assignedTo": [
       "1"
     ],
