--- a/data/tasks.json
+++ b/data/tasks.json
@@ -3,7 +3,7 @@
     "id": 1,
     "text": "设计一个新的 logo",
     "completed": false,
-    "status": "todo",
+    "status": "inprogress",
     "assignedTo": [
       "1"
     ],
@@ -18,7 +18,7 @@
     "id": 2,
     "text": "开发登录页面",
     "completed": false,
-    "status": "inprogress",
+    "status": "todo",
     "assignedTo": [
       "2"
     ],
@@ -43,5 +43,18 @@
     "dueDate": "2024-08-25",
     "priority": "high",
     "projectId": 2
+  },
+  {
+    "id": 4,
+    "text": "1",
+    "completed": false,
+    "status": "todo",
+    "assignedTo": [
+      "2"
+    ],
+    "tags": [],
+    "dueDate": null,
+    "priority": "high",
+    "projectId": null
   }
 ]
