--- a/.github/workflows/dev-to-master-review.yml
+++ b/.github/workflows/dev-to-master-review.yml
@@ -12,6 +12,8 @@ env:
   NEXT_TELEMETRY_DISABLED: 1
 
 jobs:
+
+
   build-and-lint:
     name: Build and Lint
     runs-on: ubuntu-latest
@@ -34,6 +36,15 @@ jobs:
 
     - name: '🏗️ Build Next.js'
       run: npm run build
+
+    
+  test-Dockerfile:
+    name: Build and Lint
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: '🛎️ Checkout code'
+      uses: actions/checkout@v4
 
     - name: '🐳 Set up Docker Buildx'
       uses: docker/setup-buildx-action@v3
