--- a/.github/workflows/dev-to-master-review.yml
+++ b/.github/workflows/dev-to-master-review.yml
@@ -6,16 +6,18 @@ on:
     branches: [master, main]
     types: [opened, synchronize, reopened]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 # 环境变量
 env:
   CI: true
   NEXT_TELEMETRY_DISABLED: 1
 
 jobs:
-
-
-  build-and-lint:
-    name: Build and Lint
+  build-lint-and-test:
+    name: Build, Lint and Test
     runs-on: ubuntu-latest
 
     steps:
@@ -29,22 +31,26 @@ jobs:
         cache: 'npm'
 
     - name: '📦 Install dependencies'
-      run: npm install --no-audit
+      run: npm ci
 
-    - name: '🔌 Npm lint'
-      run: npm run lint
+    - name: ' lint and Build'
+      run: |
+        npm run lint
+        npm run build
 
-    - name: '🏗️ Build Next.js'
-      run: npm run build
-
-    
-  test-Dockerfile:
-    name: Build and Lint
+  test-dockerfile:
+    name: Test Dockerfile
     runs-on: ubuntu-latest
 
     steps:
     - name: '🛎️ Checkout code'
       uses: actions/checkout@v4
+
+    - name: '⎔ Setup Node.js 20.x'
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20.x
+        cache: 'npm'
 
     - name: '🐳 Set up Docker Buildx'
       uses: docker/setup-buildx-action@v3
@@ -57,3 +63,20 @@ jobs:
         push: false
         load: true
         tags: team-task-manager-test:latest
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+
+  summary:
+    name: Summary
+    runs-on: ubuntu-latest
+    needs: [build-lint-and-test,test-dockerfile]
+    if: always()
+    steps:
+      - name: '✅ All jobs passed'
+        if: ${{ !contains(join(needs.*.result, ','), 'failure') && !contains(join(needs.*.result, ','), 'cancelled') }}
+        run: echo "All jobs passed"
+      - name: '❌ Some jobs failed'
+        if: ${{ contains(join(needs.*.result, ','), 'failure') || contains(join(needs.*.result, ','), 'cancelled') }}
+        run: |
+          echo "Some jobs failed"
+          exit 1
