--- a/.github/workflows/master-docker-publish.yml
+++ b/.github/workflows/master-docker-publish.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - master
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build-and-lint:
     name: Build and Lint
@@ -21,17 +25,17 @@ jobs:
         cache: 'npm'
 
     - name: '📦 Install dependencies'
-      run: npm install --no-audit
+      run: npm ci
 
-    - name: '🔌 Npm lint'
-      run: npm run lint
-
-    - name: '🏗️ Build Next.js'
-      run: npm run build
+    - name: ' lint and Build'
+      run: |
+        npm run lint
+        npm run build
 
   push_to_registry:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
+    needs: build-and-lint
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
@@ -46,9 +50,26 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build and push
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/team_task_manager:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  summary:
+    name: Summary
+    runs-on: ubuntu-latest
+    needs: [build-and-lint, push_to_registry]
+    if: always()
+    steps:
+      - name: '✅ All jobs passed'
+        if: ${{ !contains(join(needs.*.result, ','), 'failure') && !contains(join(needs.*.result, ','), 'cancelled') }}
+        run: echo "All jobs passed"
+      - name: '❌ Some jobs failed'
+        if: ${{ contains(join(needs.*.result, ','), 'failure') || contains(join(needs.*.result, ','), 'cancelled') }}
+        run: |
+          echo "Some jobs failed"
+          exit 1
